--- a/src/html/16_study_word_单词初识_2.html
+++ b/src/html/16_study_word_单词初识_2.html
@@ -104,7 +104,10 @@
                 <p class="en-word">word</p>
                 <p class="alphabet-wp clearfix">
                   <span class="alphabet">[wɜ:d]</span>
-                  <a href="javascript:;" class="horn-a"></a>
+                  <audio class="audioType1">
+                    <source src="../music/3.mp3" type="audio/mp3">
+                  </audio>
+                  <a href="javascript:;" class="horn-a tooglePlay play"></a>
                 </p>
               </div>
               <div class="preview-right">
