--- a/src/html/18_study_word_听音写词_3.html
+++ b/src/html/18_study_word_听音写词_3.html
@@ -102,8 +102,11 @@
             <div class="clearfix content-minheight">
               <div class="perview-left only-mean">
                 <p class="horn-wp">
-                  <a href="javascript:;" class="horn-a"></a>
-                  <span class="horn-cue">点击或按ctrl重听</span>
+                  <audio class="audioType1">
+                    <source src="../music/3.mp3" type="audio/mp3">
+                  </audio>
+                  <a href="javascript:;" class="horn-a tooglePlay play"></a>
+                  <span class="horn-cue">点击播放语音</span>
                 </p>
                 <div class="clearfix input-word">
                     <input type="text" class="write-word" placeholder="请输入听到的单词">
@@ -169,6 +172,7 @@
 
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_wj.js"></script>
+  <script src="../js/main_xc.js"></script>
 </body>
 
 </html>
