--- a/src/html/23_newsetence_句子初识_2.html
+++ b/src/html/23_newsetence_句子初识_2.html
@@ -109,8 +109,11 @@
             <div class="clearfix content-minheight">
               <div class="perview-left">
                 <p class="horn-wp">
-                  <a href="javascript:;" class="horn-a"></a>
-                  <span class="horn-cue">点击或按ctrl重听</span>
+                  <audio class="audioType1">
+                    <source src="../music/3.mp3" type="audio/mp3">
+                  </audio>
+                  <a href="javascript:;" class="horn-a tooglePlay play"></a>
+                  <span class="horn-cue">点击播放语音</span>
                 </p>
                 <p class="en-txt">How are you？</p>
                 <p class="cn-txt">你好吗？</p>
