--- a/src/html/15_study_word_新词复习.html
+++ b/src/html/15_study_word_新词复习.html
@@ -115,7 +115,7 @@
                   <audio class="audioType1">
                     <source src="../music/3.mp3" type="audio/mp3">
                   </audio>
-                  <a href="javascript:;" class="horn-a tooglePlay play"></a>
+                  <a href="javascript:;" class="horn-a tooglePlay musicAuto play"></a>
                 </p>
                 <p class="word-mean">
                   <span>n. </span>单词；话语；诺言；消息；</p>
@@ -140,7 +140,7 @@
               <li>本次学习</li>
               <li>
                 <img src="../img/duration_icon.png" alt="" class="duration-img">有效时长
-                <span class="txt">00:05:00</span>
+                <span class="txt" id="timeToFormat">00:00:00</span>
               </li>
               <li>
                 <img src="../img/newword.png" alt="" class="newword-img">生词：
