--- a/src/html/18_study_word_听音写词_3.html
+++ b/src/html/18_study_word_听音写词_3.html
@@ -105,7 +105,7 @@
                   <audio class="audioType1">
                     <source src="../music/3.mp3" type="audio/mp3">
                   </audio>
-                  <a href="javascript:;" class="horn-a tooglePlay play"></a>
+                  <a href="javascript:;" class="horn-a tooglePlay play musicAuto"></a>
                   <span class="horn-cue">点击播放语音</span>
                 </p>
                 <div class="clearfix input-word">
