--- a/src/html/16_study_word_单词初识.html
+++ b/src/html/16_study_word_单词初识.html
@@ -107,7 +107,7 @@
                   <audio class="audioType1">
                     <source src="../music/3.mp3" type="audio/mp3">
                   </audio>
-                  <a href="javascript:;" class="horn-a tooglePlay play"></a>
+                  <a href="javascript:;" class="horn-a tooglePlay play musicAuto"></a>
                 </p>
                 <p class="word-mean"><span>n. </span>单词；话语；诺言；消息；</p>
                 <p class="word-mean"><span>vt.</span>措辞，用词；用言语表达；</p>
