--- a/src/html/43_study_letter_学字母_1.html
+++ b/src/html/43_study_letter_学字母_1.html
@@ -107,7 +107,7 @@
                   <audio class="audioType1">
                     <source src="../music/3.mp3" type="audio/mp3">
                   </audio>
-                  <a href="javascript:;" class="horn-a tooglePlay play"></a>
+                  <a href="javascript:;" class="horn-a tooglePlay play musicAuto"></a>
                 </p>
               </div>
               <div class="preview-right">
