--- a/src/html/15_study_word_新词复习.html
+++ b/src/html/15_study_word_新词复习.html
@@ -220,7 +220,15 @@
 
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_wj.js"></script>
+  <script>
+    var totTime = 30 // 总时长（单位秒）
+  </script>
   <script src="../js/main_xc.js"></script>
+  <script>
+    setTimeout(function() {
+      alert(comment.getTotTime())
+    }, 5000)
+  </script>
 </body>
 
 </html>
