--- a/src/html/17_study_word_看字拼词.html
+++ b/src/html/17_study_word_看字拼词.html
@@ -105,7 +105,9 @@
                 <p class="word-mean"><span>vt.</span>措辞，用词；用言语表达；</p>
                 <p class="word-mean"><span>vi.</span>讲话；</p>
                 <div>
-                    <input type="text" class="write-word" placeholder="请拼写单词">
+                    <input type="text" class="write-word" id="writeword" placeholder="请拼写单词">
+                    <i class="word_wrong_icon" id='showresult'></i>
+                    <p id="refword" class="xc-hidden">pen</p>
                 </div>
               </div>
               <div class="preview-right">
