--- a/src/html/18_study_word_听音写词_3.html
+++ b/src/html/18_study_word_听音写词_3.html
@@ -109,7 +109,9 @@
                   <span class="horn-cue">点击播放语音</span>
                 </p>
                 <div class="clearfix input-word">
-                    <input type="text" class="write-word" placeholder="请输入听到的单词">
+                    <input type="text" class="write-word" id="writeword" placeholder="请输入听到的单词">
+                    <i class="word_wrong_icon" id='showresult'></i>
+                    <p id="refword" class="xc-hidden">pen</p>
                 </div>
               </div>
               <div class="preview-right">
