--- a/src/html/18_study_word_听音写词_2.html
+++ b/src/html/18_study_word_听音写词_2.html
@@ -108,13 +108,13 @@
                   <a href="javascript:;" class="horn-a tooglePlay play musicAuto"></a>
                   <span class="horn-cue">点击播放语音</span>
                 </p>
-                <p class="the-word">word</p>
+                <p class="the-word" id='refword'>word</p>
                 <p class="word-mean"><span>n. </span>单词；话语；诺言；消息；</p>
                 <p class="word-mean"><span>vt.</span>措辞，用词；用言语表达；</p>
                 <p class="word-mean"><span>vi.</span>讲话；</p>
                 <div class="clearfix input-word">
-                    <input type="text" class="write-word" placeholder="请拼写单词" value="wood">
-                    <i class="word_wrong_icon"></i>
+                    <input type="text" class="write-word" id='writeword' placeholder="请拼写单词" value="">
+                    <i class="word_wrong_icon" id='showresult'></i>
                 </div>
               </div>
               <div class="preview-right">
