--- a/src/html/19_study_word_学后智测智学单词.html
+++ b/src/html/19_study_word_学后智测智学单词.html
@@ -95,8 +95,12 @@
           <li>
             <div class="clearfix title-wp">
               <div class="title">
-                1.<a href="javascript:;" class="horn"><img src="../img/horn_gery.png" alt=""></a>
-                点击播放语音
+                <audio class="audioType1">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+                1.
+                <img class="w24 tooglePlay play" src="../img/playsound.png"  alt="">
+                <span>点击播放语音</span>
               </div>
             </div>
             <input class="part-ipt" type="text" placeholder="请拼写单词">
@@ -104,20 +108,28 @@
           <li>
             <div class="clearfix title-wp">
               <div class="title">
-                2.<a href="javascript:;" class="horn"><img src="../img/horn_active.png" alt=""></a>
-                点击暂停语音
+                <audio class="audioType1">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+                2.
+                <img class="w24 tooglePlay play" src="../img/playsound.png"  alt="">
+                <span>点击播放语音</span>
               </div>
             </div>
-            <input class="part-ipt" type="text" value="word">
+            <input class="part-ipt" type="text" value="" placeholder="请拼写单词">
           </li>
           <li>
-            <div class="clearfix title-wp">
-              <div class="title">
-                3.<a href="javascript:;" class="horn"><img src="../img/horn_gery.png" alt=""></a>
-                点击播放语音
+              <div class="clearfix title-wp">
+                <div class="title">
+                  <audio class="audioType1">
+                    <source src="../music/3.mp3" type="audio/mp3">
+                  </audio>
+                  3.
+                  <img class="w24 tooglePlay play" src="../img/playsound.png"  alt="">
+                  <span>点击播放语音</span>
+                </div>
               </div>
-            </div>
-            <input class="part-ipt" type="text" placeholder="请拼写单词">
+              <input class="part-ipt" type="text" value="" placeholder="请拼写单词">
           </li>
         </ul>
       </div>
@@ -167,6 +179,7 @@
   </div>
 
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <script src="../js/main_xc.js"></script>
 </body>
 
 </html>
