--- a/src/html/24_setence_combining_看字组句.html
+++ b/src/html/24_setence_combining_看字组句.html
@@ -110,17 +110,17 @@
                 <div class="setencecomb-wp">
                   <div class="input-wp">
                     <!-- 如果答案错误 给对应的input加err-ipt类名 -->
-                    <input type="text" class="ipt iptReviewWord" value="" tip='How'>
-                    <input type="text" class="ipt iptReviewWord" value="" tip='are'>
-                    <input type="text" class="ipt iptReviewWord" value="" tip='you'>
+                    <input type="text" class="ipt iptReviewWord enter" value="" tip='How'>
+                    <input type="text" class="ipt iptReviewWord enter" value="" tip='are'>
+                    <input type="text" class="ipt iptReviewWord enter" value="" tip='you'>
                     <span class="quertion-txt">?</span>
                     <!-- 答案正确 -->
-                    <!-- <i class="default-icon"></i> -->
+                    <!-- <i class="right-icon"></i> -->
                     <!-- 答案错误 -->
                     <i class="default-icon" id="iptReviewShowresult"></i>
                   </div>
-                  <!-- <p class="right-result-txt">正确答案：how are you?</p>
-                  <p class="setence-text-cn">你好吗？</p> -->
+                  <p class="right-result-txt">正确答案：how are you?</p>
+                  <p class="setence-text-cn">你好吗？</p>
                 </div>
               </div>
             </div>
