--- a/src/html/19_study_word_学后智测智学单词.html
+++ b/src/html/19_study_word_学后智测智学单词.html
@@ -99,7 +99,7 @@
                   <source src="../music/3.mp3" type="audio/mp3">
                 </audio>
                 1.
-                <img class="w24 tooglePlay play" src="../img/playsound.png"  alt="">
+                <a class="w24 tooglePlay play"  alt=""></a>
                 <span>点击播放语音</span>
               </div>
             </div>
@@ -112,7 +112,7 @@
                   <source src="../music/3.mp3" type="audio/mp3">
                 </audio>
                 2.
-                <img class="w24 tooglePlay play" src="../img/playsound.png"  alt="">
+                <a class="w24 tooglePlay play"  alt=""></a>
                 <span>点击播放语音</span>
               </div>
             </div>
@@ -125,7 +125,7 @@
                     <source src="../music/3.mp3" type="audio/mp3">
                   </audio>
                   3.
-                  <img class="w24 tooglePlay play" src="../img/playsound.png"  alt="">
+                  <a class="w24 tooglePlay play"  alt=""></a>
                   <span>点击播放语音</span>
                 </div>
               </div>
