--- a/src/html/18_study_word_听音写词.html
+++ b/src/html/18_study_word_听音写词.html
@@ -109,7 +109,7 @@
                   <span class="horn-cue">点击播放语音</span>
                 </p>
                 <p class="the-word">word</p>
-                <p class="word-mean"><span>n. </span>单词；话语；诺言；消息；</p>
+                <p class="word-mean xc-red"><span>n. </span>单词；话语；诺言；消息；</p>
                 <p class="word-mean"><span>vt.</span>措辞，用词；用言语表达；</p>
                 <p class="word-mean"><span>vi.</span>讲话；</p>
                 <div class="clearfix input-word">
