--- a/src/html/24_setence_combining_看字组句.html
+++ b/src/html/24_setence_combining_看字组句.html
@@ -120,7 +120,7 @@
                 </div>
               </div>
               <div class="preview-right">
-                  <div class="next-wp">
+                  <div class="next-wp pt40">
                     <img src="../img/next_icon.png" alt="" class="next-img">
                     <p class="next-txt">Next</p>
                   </div>
