--- a/src/html/16_study_word_单词初识_2.html
+++ b/src/html/16_study_word_单词初识_2.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/main_momo.css">
 </head>
-<body class="body-preview">
+<body class="body-preview documentEnter">
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
