--- a/src/html/21_oralpractice_口语训练之词汇.html
+++ b/src/html/21_oralpractice_口语训练之词汇.html
@@ -26,46 +26,46 @@
   <![endif]-->
   <!-- build:head -->
   <header class="comm-header">
-  <div class="midd_header clearfix">
-    <div class="index_icon">
-      <a href="index.html"></a>
-    </div>
-    <ul class="nav clearfix">
-      <li class="active">
-        <a href="#">课程中心</a>
-      </li>
-      <li>
-        <a href="#">我的班级</a>
-      </li>
-      <li>
-        <a href="#">排行榜</a>
-      </li>
-      <li>
-        <a href="#">学币商城</a>
-      </li>
-    </ul>
-    <div class="login">
-      <a href="#">个人中心</a>
-      <ul class="head-list">
-        <li>
-          <a class="info" href='javascript:;'>个人资料</a>
+    <div class="midd_header clearfix">
+      <div class="index_icon">
+        <a href="index.html"></a>
+      </div>
+      <ul class="nav clearfix">
+        <li class="active">
+          <a href="#">课程中心</a>
         </li>
         <li>
-          <a class="honor" href='javascript:;'>荣誉中心</a>
+          <a href="#">我的班级</a>
         </li>
         <li>
-          <a class='test'href='javascript:;'>测试记录</a>
+          <a href="#">排行榜</a>
         </li>
         <li>
-          <a class="task" href='javascript:;'>我的任务</a>
-        </li>
-        <li>
-          <a class="logout" href='javascript:;'>退出登录</a>
+          <a href="#">学币商城</a>
         </li>
       </ul>
+      <div class="login">
+        <a href="#">个人中心</a>
+        <ul class="head-list">
+          <li>
+            <a class="info" href='javascript:;'>个人资料</a>
+          </li>
+          <li>
+            <a class="honor" href='javascript:;'>荣誉中心</a>
+          </li>
+          <li>
+            <a class='test' href='javascript:;'>测试记录</a>
+          </li>
+          <li>
+            <a class="task" href='javascript:;'>我的任务</a>
+          </li>
+          <li>
+            <a class="logout" href='javascript:;'>退出登录</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</header>
+  </header>
   <!-- endbuild -->
 
 
@@ -108,7 +108,7 @@
           <div class="practice-ct">
             <div class="clearfix">
               <div class="word-left">
-                <p class="word">word</p>
+                <p class="word" id="reword">word</p>
                 <p class="word-cue">[wɜ:d]</p>
                 <p class="word-txt">
                   <span class="word-list">n.</span>单词；话语；诺言；消息；</p>
@@ -146,17 +146,23 @@
                 </div>
                 <ul class="clearfix btn-ul">
                   <!-- 高亮显示 给li添加 active 类名 -->
-                  <li class="active">
-                    <a href="javascript:;"></a>
-                    <p class="btn-txt">播放原音</p>
+                  <li>
+                    <audio class="audioType1 yuanyin">
+                      <source src="../music/3.mp3" type="audio/mp3">
+                    </audio>
+                    <a href="javascript:;" class='tooglePlay play musicAuto'></a>
+                    <span class="btn-txt">播放原音</span>
                   </li>
                   <li>
-                    <a href="javascript:;"></a>
+                    <a href="javascript:;" id="recording"></a>
                     <p class="btn-txt">录音</p>
                   </li>
                   <li>
-                    <a href="javascript:;" class="play"></a>
-                    <p class="btn-txt">播放</p>
+                      <audio class="audioType1 luyin">
+                        <source src="../music/3.mp3" type="audio/mp3">
+                      </audio>
+                      <a href="javascript:;" class='tooglePlay play'></a>
+                      <span class="btn-txt">播放</span>
                   </li>
                 </ul>
               </div>
@@ -187,63 +193,66 @@
         </div>
       </div>
     </div>
+    <div>
+        <audio class="audio" controls autoplay></audio>
+    </div>
     <div class="xc-banner">
-        <div class="xc-banner-marker"></div>
-        <div class="xc-banner-body">
-          <h2 class="xc-banner-title">教程说明
-            <img class="xc-banner-close" src="../img/xc-banner-close.png" alt="">
-          </h2>
-          <div class="xc-banner-items-box">
-            <div class="xc-banner-items">
-              <div class="xc-banner-item active">
-                <img class="xc-banner-img" src="../img/21_word_1.png" alt="教程">
-              </div>
-              <div class="xc-banner-item">
-                <img class="xc-banner-img" src="../img/21_word_2.png" alt="教程">
-              </div>
-              <div class="xc-banner-item">
-                <img class="xc-banner-img" src="../img/21_word_3.png" alt="教程">
-              </div>
-              <div class="xc-banner-item">
-                <img class="xc-banner-img" src="../img/21_word_4.png" alt="教程">
-              </div>
-              <div class="xc-banner-item">
-                <img class="xc-banner-img" src="../img/21_word_5.png" alt="教程">
-              </div>
-              <div class="xc-banner-item">
-                <img class="xc-banner-img" src="../img/21_word_6.png" alt="教程">
-              </div>
-              <div class="xc-banner-item">
-                <img class="xc-banner-img" src="../img/21_word_7.png" alt="教程">
-              </div>
-              <div class="xc-banner-item">
-                <img class="xc-banner-img" src="../img/21_word_8.png" alt="教程">
-              </div>
+      <div class="xc-banner-marker"></div>
+      <div class="xc-banner-body">
+        <h2 class="xc-banner-title">教程说明
+          <img class="xc-banner-close" src="../img/xc-banner-close.png" alt="">
+        </h2>
+        <div class="xc-banner-items-box">
+          <div class="xc-banner-items">
+            <div class="xc-banner-item active">
+              <img class="xc-banner-img" src="../img/21_word_1.png" alt="教程">
+            </div>
+            <div class="xc-banner-item">
+              <img class="xc-banner-img" src="../img/21_word_2.png" alt="教程">
+            </div>
+            <div class="xc-banner-item">
+              <img class="xc-banner-img" src="../img/21_word_3.png" alt="教程">
+            </div>
+            <div class="xc-banner-item">
+              <img class="xc-banner-img" src="../img/21_word_4.png" alt="教程">
+            </div>
+            <div class="xc-banner-item">
+              <img class="xc-banner-img" src="../img/21_word_5.png" alt="教程">
+            </div>
+            <div class="xc-banner-item">
+              <img class="xc-banner-img" src="../img/21_word_6.png" alt="教程">
+            </div>
+            <div class="xc-banner-item">
+              <img class="xc-banner-img" src="../img/21_word_7.png" alt="教程">
+            </div>
+            <div class="xc-banner-item">
+              <img class="xc-banner-img" src="../img/21_word_8.png" alt="教程">
             </div>
           </div>
-          <div class="xc-banner-btns">
-            <span class="active">1</span>/
-            <span>8</span>
-            <span class="xc-banner-btn xc-banner-prv"></span>
-            <span class="xc-banner-btn xc-banner-next"></span>
-          </div>
+        </div>
+        <div class="xc-banner-btns">
+          <span class="active">1</span>/
+          <span>8</span>
+          <span class="xc-banner-btn xc-banner-prv"></span>
+          <span class="xc-banner-btn xc-banner-next"></span>
         </div>
       </div>
+    </div>
     <!-- build:foot -->
     <!-- 底部 -->
-  <div class="footer">
-    <div class="footer-ct">
-      <div class="tel-wp">
-        <img src="../img/logo.png" alt="" class="logo">
-        <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
+    <div class="footer">
+      <div class="footer-ct">
+        <div class="tel-wp">
+          <img src="../img/logo.png" alt="" class="logo">
+          <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
+        </div>
+        <p class="ads-wp">
+          <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
+          <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
+        </p>
+        <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
       </div>
-      <p class="ads-wp">
-        <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
-        <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
-      </p>
-      <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
     </div>
-  </div>
     <!-- endbuild -->
 
 
@@ -255,6 +264,7 @@
 
   </div>
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <script src="../js/HZRecorder.js"></script>
   <script src="../js/main_wj.js"></script>
   <script src="../js/main_xc.js"></script>
 </body>
