--- a/src/html/21_oralpractice_口语训练之词汇.html
+++ b/src/html/21_oralpractice_口语训练之词汇.html
@@ -126,7 +126,7 @@
                   </div>
                   <!-- 录音 end -->
                   <!-- 录音分析 start -->
-                  <div class="sound-analyse clearfix">
+                  <div class="sound-analyse clearfix none">
                     <img src="../img/ai_icon.png" alt="" class="soundanalyse-img">
                     <p class="soundanalyse-txt">智能AI正在评估您的语音…</p>
                   </div>
