--- a/src/html/03_index.html
+++ b/src/html/03_index.html
@@ -27,46 +27,46 @@
   <div class="wrap">
     <!-- build:head -->
     <header class="comm-header">
-  <div class="midd_header clearfix">
-    <div class="index_icon">
-      <a href="index.html"></a>
-    </div>
-    <ul class="nav clearfix">
-      <li class="active">
-        <a href="#">课程中心</a>
-      </li>
-      <li>
-        <a href="#">我的班级</a>
-      </li>
-      <li>
-        <a href="#">排行榜</a>
-      </li>
-      <li>
-        <a href="#">学币商城</a>
-      </li>
-    </ul>
-    <div class="login">
-      <a href="#">个人中心</a>
-      <ul class="head-list">
-        <li>
-          <a class="info" href='javascript:;'>个人资料</a>
-        </li>
-        <li>
-          <a class="honor" href='javascript:;'>荣誉中心</a>
-        </li>
-        <li>
-          <a class='test'href='javascript:;'>测试记录</a>
-        </li>
-        <li>
-          <a class="task" href='javascript:;'>我的任务</a>
-        </li>
-        <li>
-          <a class="logout" href='javascript:;'>退出登录</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</header>
+      <div class="midd_header clearfix">
+        <div class="index_icon">
+          <a href="index.html"></a>
+        </div>
+        <ul class="nav clearfix">
+          <li class="active">
+            <a href="#">课程中心</a>
+          </li>
+          <li>
+            <a href="#">我的班级</a>
+          </li>
+          <li>
+            <a href="#">排行榜</a>
+          </li>
+          <li>
+            <a href="#">学币商城</a>
+          </li>
+        </ul>
+        <div class="login">
+          <a href="#">个人中心</a>
+          <ul class="head-list">
+            <li>
+              <a class="info" href='javascript:;'>个人资料</a>
+            </li>
+            <li>
+              <a class="honor" href='javascript:;'>荣誉中心</a>
+            </li>
+            <li>
+              <a class='test' href='javascript:;'>测试记录</a>
+            </li>
+            <li>
+              <a class="task" href='javascript:;'>我的任务</a>
+            </li>
+            <li>
+              <a class="logout" href='javascript:;'>退出登录</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
     <!-- endbuild -->
 
 
@@ -179,7 +179,7 @@
             </div>
             <div class="user_info_details">
               <div class="welcome">
-                  <img src="../img/welcome.png" alt="">
+                <img src="../img/welcome.png" alt="">
               </div>
             </div>
           </li>
@@ -190,7 +190,7 @@
             </div>
             <div class="user_info_details clearfix">
               <div class="expect">
-                  <img src="../img/expect.png" alt="">即将开放
+                <img src="../img/expect.png" alt="">即将开放
               </div>
             </div>
           </li>
@@ -200,9 +200,9 @@
               <span class="user_info_title_heading">我的军衔</span>
             </div>
             <div class="user_info_details clearfix">
-                <div class="expect">
-                    <img src="../img/expect.png" alt="">即将开放
-                </div>
+              <div class="expect">
+                <img src="../img/expect.png" alt="">即将开放
+              </div>
             </div>
           </li>
         </ul>
@@ -1277,7 +1277,146 @@
     </div>
 
     <!--course center-->
-    <div class="course_center_wrap">
+    <div class="course_center_wrap xc_center_wrap">
+        <div class="course_center xc_center">
+          <div class="change_course_nav clearfix">
+            <a class="change_course_nav_list active">我的课程</a>
+            <span class="close"></span>
+          </div>
+          <div class="change_course_details">
+            <div class="change_course_details-list active" style="padding: 10px 30px;">
+                <div class="xc-new-table">
+                    <div class="xc-table-head">
+                      <ul>
+                        <li class="col-xs-4">课程阶段</li>
+                        <li class="col-xs-4">课程版本</li>
+                        <li class="col-xs-4">课本</li>
+                      </ul>
+                    </div>
+                    <div class="xc-table-body">
+                      <ul class="jq-xc-table grammar">
+                                        <li class="one active">小学英语                  <ul class="two">
+                                                <li class="">剑桥国际少儿英语                      <ul class="three big">
+                                                        <li class="active ">
+                                                            <a href="/course/index/sc_id/26.html">第一册</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/869.html">第二册</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/870.html">第三册</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/871.html">第四册</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/872.html">第五册</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/873.html">第六册</a>
+                                                          </li>
+                                                      </ul>
+                            </li>
+                                                <li class="active">牛津版                      <ul class="three big">
+                                                        <li class="active ">
+                                                            <a href="/course/index/sc_id/29751.html">1A</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29764.html">2A</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29765.html">3B</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29766.html">4A</a>
+                                                          </li>
+                                                      </ul>
+                            </li>
+                                                <li class="">牛津上海版                      <ul class="three big">
+                                                        <li class="active ">
+                                                            <a href="/course/index/sc_id/29773.html">一年级上册</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29774.html">一年级下册</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29775.html">二年级上册</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29776.html">二年级下册</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29777.html">三年级上册</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29778.html">三年级下册 </a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29779.html">四年级上册 </a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29780.html">四年级下册</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29781.html">五年级上册</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29782.html">五年级下册 </a>
+                                                          </li>
+                                                      </ul>
+                            </li>
+                                              </ul>
+                        </li>
+                                        <li class="one">初中英语                  <ul class="two">
+                                              </ul>
+                        </li>
+                                        <li class="one">高中英语                  <ul class="two">
+                                                <li class="active">高考必背熟词生义                      <ul class="three big">
+                                                        <li class="active ">
+                                                            <a href="/course/index/sc_id/29734.html">高考必背熟词生义(一)</a>
+                                                          </li>
+                                                        <li class=" ">
+                                                            <a href="/course/index/sc_id/29743.html">高考必背熟词生义(二)</a>
+                                                          </li>
+                                                      </ul>
+                            </li>
+                                              </ul>
+                        </li>
+                                        <li class="one">大学英语                  <ul class="two">
+                                                <li class="active">四级                      <ul class="three big">
+                                                        <li class="active ">
+                                                            <a href="/course/index/sc_id/29770.html">基础词汇一</a>
+                                                          </li>
+                                                      </ul>
+                            </li>
+                                              </ul>
+                        </li>
+                                        <li class="one">出国考试                  <ul class="two">
+                                              </ul>
+                        </li>
+                                        <li class="one">成人考试                  <ul class="two">
+                                              </ul>
+                        </li>
+                                        <li class="one">常用英语                  <ul class="two">
+                                              </ul>
+                        </li>
+                                        <li class="one">其他课程                  <ul class="two">
+                                                <li class="active">2008奥巴马胜选演讲                      <ul class="three big">
+                                                        <li class="active ">
+                                                            <a href="/course/index/sc_id/29755.html">美国迎来变革时代</a>
+                                                          </li>
+                                                      </ul>
+                            </li>
+                                              </ul>
+                        </li>
+                                      </ul>
+                    </div>
+                  </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- <div class="course_center_wrap">
       <div class="course_center">
         <div class="change_course_nav clearfix">
           <a class="change_course_nav_list active">我的课程</a>
@@ -1413,7 +1552,7 @@
           </table>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <!-- build:foot -->
   <!-- 底部 -->
@@ -1446,6 +1585,7 @@
 
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_momo.js"></script>
+  <script src="../js/main_xc.js"></script>
 </body>
 
 </html>
