--- a/src/html/21_oralpractice_口语训练之词汇.html
+++ b/src/html/21_oralpractice_口语训练之词汇.html
@@ -161,7 +161,7 @@
                       <audio class="audioType1 luyin">
                         <source src="../music/3.mp3" type="audio/mp3">
                       </audio>
-                      <a href="javascript:;" class='tooglePlay play'></a>
+                      <a href="javascript:;" class='play'></a>
                       <span class="btn-txt">播放</span>
                   </li>
                 </ul>
