--- a/src/html/顺序播放.html
+++ b/src/html/顺序播放.html
@@ -114,6 +114,7 @@
                   <span>e</span>
                   <span>l</span>
                   <span>l</span>
+                  <span>•</span>
                   <span>o</span>
                 </p>
                 <p class="alphabet-wp clearfix">
@@ -121,7 +122,7 @@
                   <audio class="audioType1">
                     <source src="../music/Hello.mp3" type="audio/mp3">
                   </audio>
-                  <a href="javascript:;" class="horn-a tooglePlay  play"></a>
+                  <a href="javascript:;" class="horn-a tooglePlay  play" id="orderAudioBtn"></a>
                 </p>
                 <div class="audio-items">
                   <div class="audio-item">
@@ -143,6 +144,11 @@
                       <audio class="audioType1 orderAudio" data-mp3="">
                         <source src="../music/L.mp3" type="audio/mp3">
                       </audio>
+                  </div>
+                  <div class="audio-item not">
+                    <audio class="audioType1 orderAudio" data-mp3="">
+                      <source src="../music/L.mp3" type="audio/mp3">
+                    </audio>
                   </div>
                   <div class="audio-item">
                       <audio class="audioType1 orderAudio">
