--- a/src/html/19_study_word_学后智测智学单词.html
+++ b/src/html/19_study_word_学后智测智学单词.html
@@ -103,7 +103,7 @@
                 <span>点击播放语音</span>
               </div>
             </div>
-            <input class="part-ipt" type="text" placeholder="请拼写单词">
+            <input class="part-ipt ipt-foucs" type="text" placeholder="请拼写单词">
           </li>
           <li>
             <div class="clearfix title-wp">
@@ -116,7 +116,7 @@
                 <span>点击播放语音</span>
               </div>
             </div>
-            <input class="part-ipt" type="text" value="" placeholder="请拼写单词">
+            <input class="part-ipt ipt-foucs" type="text" value="" placeholder="请拼写单词">
           </li>
           <li>
               <div class="clearfix title-wp">
@@ -129,7 +129,7 @@
                   <span>点击播放语音</span>
                 </div>
               </div>
-              <input class="part-ipt" type="text" value="" placeholder="请拼写单词">
+              <input class="part-ipt ipt-foucs" type="text" value="" placeholder="请拼写单词">
           </li>
         </ul>
       </div>
